--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,18 @@ body {
 html {
   scroll-behavior: smooth;
 }
+@media (min-width: 768px) {
+  .container {
+    width: 730px;
+  }
+}
+@media (min-width: 998px) {
+  .container {
+    width: 940px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1150px;
+  }
+}
