--- a/src/components/common/Footer/Footer.module.css
+++ b/src/components/common/Footer/Footer.module.css
@@ -15,12 +15,12 @@
 
 .footer h1 {
   color: #f0a30b;
-  font-size: 45px;
+  font-size: 50px;
 }
 .footer .nav {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   gap: 10px;
 }
 .footer .nav a {
