--- a/src/components/common/Navbar/Navbar.module.css
+++ b/src/components/common/Navbar/Navbar.module.css
@@ -29,6 +29,7 @@
   top: 35px;
   width: 200px;
   display: none;
+  z-index:10000;
 }
 .categories:hover .ourCategories {
   display: flex;
@@ -40,10 +41,10 @@ ul li {
    color:#f6f6f6;
 
 }
-/* .ourCategories li:hover {
+.ourCategories li:hover {
   background-color: #f0a30b;
   font-weight: 700;
-} */
+}
 nav ul {
   display: flex;
    color:#f6f6f6;
@@ -76,7 +77,7 @@ nav .links:hover{
   padding: 10px 20px;
   border: 1px solid #f0a30b;
   font-size: 19px;
-  border-radius: 25px;
+  border-radius: 20px;
 }
 
 .login button:hover {
