--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -35,6 +35,7 @@
   text-align: center;
   background-color: initial;
   margin-bottom: 80px;
+  margin: 5px 12px;
 }
 .image-container .text .h {
   font-weight: bold;
@@ -45,34 +46,40 @@
   font-weight: 500;
 }
 
-/* .image-container .links {
-  position: absolute;
-  top: 80%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-.image-container .links .link {
-  color: #0c1b33;
+.image-container .link {
+  display: flex;
+  flex-direction: column;
+  /* gap: 20px; */
+  margin: 16px;
   background-color: #f0a30b;
-  width: 125px;
-  font-size: 23px;
-  padding: 10px 28px;
-  font-weight: 600;
-  border-radius: 20px;
-  margin: 20px 0 20px 20px;
-}
-.image-container .links .link:hover {
-  background-color: initial;
-  border: 2px solid #f0a30b;
   color: #f6f6f6;
+  padding: 8px 20px;
+  border-radius: 20px;
+  width: 350px;
+  font-size: 28px;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
 }
-
-/* @media (min-width: 768px) {
-  .container {
-    width: 730px;
-  }
+.image-container .link:hover {
+  background-color: initial;
+  border: 3px solid #f0a30b;
+  color: #f0a30b;
 }
 @media (min-width: 998px) {
+  .image-container .link {
+    width: 450px;
+    padding: 12px 30px;
+    font-size: 30px;
+  }
+}
+.image-container .icon-link {
+  font-size: 40px;
+  position: absolute;
+  /* bottom: 20px; */
+  /* right: 20px; */
+}
+/*@media (min-width: 998px) {
   .container {
     width: 940px;
   }
