Complete Home and Update About and Partner create Build Material

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #eee;
+  /* background-color: #eee; */
 }
 html {
   scroll-behavior: smooth;
