--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -29,16 +29,28 @@
   align-items: center;
   justify-content: center;
 }
+
 .image-container .text {
-  /* width: 800px; */
+  width: 800px;
   color: white;
   text-align: center;
   background-color: initial;
   margin-bottom: 80px;
   margin: 5px 12px;
 }
+@media (max-width: 900px) {
+  .image-container .text {
+    width: 600px;
+  }
+}
+@media (max-width: 650px) {
+  .image-container .text {
+    width: 350px;
+  }
+}
 .image-container .text .h {
   font-weight: bold;
+  margin-bottom: 20px;
   font-size: 70px;
 }
 .image-container .text .p {
