--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,13 +21,14 @@
 }
 .image-container .home {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 100px;
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* flex-direction: column; */
+  justify-content: start;
+  align-items: start;
+  right: 100px;
 }
 
 .image-container .text {
