--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,37 +17,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(12, 27, 51, 0.7); /* كحلي شفاف */
+  background-color: rgba(0, 0, 0, 0.5); /* كحلي شفاف */
 }
 .image-container .home {
   position: absolute;
-  top: 100px;
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: start;
-  align-items: start;
-  right: 100px;
+  top: 25%;
+
+  /* right: 100px; */
 }
 
 .image-container .text {
-  width: 800px;
-  color: white;
-  text-align: center;
+  width: 900px;
+  color: #ffffff;
+  /* text-align: center; */
   background-color: initial;
-  margin-bottom: 80px;
-  margin: 5px 12px;
-}
-@media (max-width: 900px) {
-  .image-container .text {
-    width: 600px;
-  }
-}
-@media (max-width: 650px) {
-  .image-container .text {
-    width: 350px;
-  }
+  margin-bottom: 30px;
+  /* margin: 5px 12px; */
 }
 .image-container .text .h {
   font-weight: bold;
@@ -55,35 +40,110 @@
   font-size: 70px;
 }
 .image-container .text .p {
-  font-size: 20px;
+  font-size: 28px;
   font-weight: 500;
 }
 
 .image-container .link {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   /* gap: 20px; */
-  margin: 16px;
-  background-color: #f0a30b;
-  color: #f6f6f6;
-  padding: 8px 20px;
-  border-radius: 20px;
-  width: 350px;
-  font-size: 28px;
+  /* margin: 16px; */
+  background-color: #fbfbfb;
+  color: #333;
+  padding: 4px 15px;
+  border-radius: 8px;
+  width: 320px;
+  font-size: 25px;
   text-align: center;
-  font-weight: bold;
+  /* font-weight: bold; */
   cursor: pointer;
+}
+.image-container .link .icon-phone {
+  position: absolute;
+  /* top: 16px; */
+  left: 7%;
+  font-size: 1.8rem;
 }
 .image-container .link:hover {
   background-color: initial;
   border: 3px solid #f0a30b;
   color: #f0a30b;
 }
+@media (max-width: 900px) {
+  .image-container .text {
+    width: 600px;
+  }
+  .image-container .text .p {
+    font-size: 22px;
+  }
+  .image-container .text .h {
+    font-size: 60px;
+    font-weight: bold;
+  }
+}
+@media (max-width: 620px) {
+  .image-container .home {
+    top: 25%;
+    max-width: 90%;
+  }
+  .image-container .text {
+    width: 380px;
+    /* margin: 10px; */
+  }
+  .image-container .text .p {
+    font-size: 20px;
+  }
+  .image-container .text .h {
+    font-size: 40px;
+    font-weight: bold;
+  }
+  .image-container .link {
+    width: 280px;
+    font-size: 23px;
+  }
+}
+
+@media (max-width: 420px) {
+  .image-container .home {
+    top: 25%;
+    max-width: 90%;
+  }
+  .image-container .text {
+    width: 320px;
+    /* margin: 10px; */
+  }
+  .image-container .text .p {
+    font-size: 20px;
+  }
+  .image-container .text .h {
+    font-size: 40px;
+    font-weight: bold;
+  }
+  .image-container .link {
+    width: 280px;
+    font-size: 23px;
+  }
+}
+
+@media (max-width: 998px) {
+  .image-container .link .icon-phone {
+    top: 4px;
+  }
+}
 @media (min-width: 998px) {
   .image-container .link {
-    width: 440px;
-    padding: 12px 30px;
-    font-size: 30px;
+    width: 280px;
+    padding: 8px 20px;
+    font-size: 20px;
+  }
+  .image-container .link .icon-phone {
+    position: absolute;
+    top: 7px;
+    left: 7%;
+    font-size: 1.8rem;
   }
 }
 .image-container .icon-link {
