--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -49,6 +49,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-content: center;
   /* gap: 20px; */
   /* margin: 16px; */
   background-color: #fbfbfb;
@@ -141,7 +142,7 @@
   }
   .image-container .link .icon-phone {
     position: absolute;
-    top: 7px;
+    top: 4px;
     left: 7%;
     font-size: 1.8rem;
   }
@@ -186,6 +187,14 @@
   filter: grayscale(100%);
   margin: 30px;
 }
+
+/* @media (max-width: 1000px) {
+  .partner-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+} */
 .partner-card:hover {
   filter: grayscale(0%);
   transform: translateY(-5px);
